# Late

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  quick_lora.yml  setup.py
.claude/: settings.local.json
examples/: comprehensive_lora.sweep  lr_sweep.sweep  with_notifications.yml
examples/llama3/: README.md  llama3.2_3b_lora.yml  llama3.2_3b_test_sweep.sweep  llama3_batch_sweep.sweep  llama3_lora_sweep.sweep  llama3_lr_sweep.sweep  lora_config.yml  production_queue.qml  sft_config.yml
examples/loss_masking/: assistant_only_masking_example.yml  full_masking_example.yml
examples/unsloth/: README.md  llama3.2_3b_unsloth.yml  llama3_8b_unsloth.yml  qwen2.5_7b_unsloth.yml
late/: cli.py  patcher-deps.json
late/engine/: config.py  merge_lora.py  patcher.py  queue_manager.py  sweep.py  sweep_report.py  training.py
late/server/: app.py
late/server/static/: style.css
late/server/templates/: configs.html  create_config.html  index.html  jobs.html  jobs_list.html  run_details.html
tests/: README.md  conftest.py  pytest.ini
tests/unit/: test_config.py  test_loss_masking.py  test_merge_lora.py
training_runs/my-first-lora_lora_20251107_223710/: training_script.py
training_runs/my-first-lora_lora_20251107_224045/: training_script.py
training_runs/my-first-lora_lora_20251107_231523/: config.json
