[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "late"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A CLI and web UI for scheduling and running training jobs on ROCm servers."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Core dependencies: The bare minimum for the CLI and web server
dependencies = [
    "click",
    "pyyaml",
    "flask",
    "waitress",
    "requests",
    "Jinja2",
    "matplotlib",
    "openpyxl",
    "pandas"
]

[project.urls]
Homepage = "https://github.com/TesslateAI/Late"
Issues = "https://github.com/TesslateAI/Late/issues"

[project.scripts]
late = "late.cli:cli"

# Optional dependencies for a full local training/dev environment
[project.optional-dependencies]
training = [
    "torch",
    "transformers>=4.56.2",
    "datasets",
    "accelerate",
    "trl",
    "peft",
    "wandb",
    "scipy",
    "numpy",
    "ninja",
    "cmake",
    "pybind11"
]

# Test dependencies
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",        # Parallel test execution
    "pytest-timeout>=2.1.0",       # Test timeouts
    "responses>=0.23.0",           # Mock HTTP requests
    "hypothesis>=6.0.0",           # Property-based testing
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]